# pyweste

./: README.md  pyproject.toml
pyweste/: __init__.py  config.py  copy.py  core.py  files.py  gui.py  installer.py  installer_gui.py  lib.py  link.py  progress.py  reg.py  registry.py  shortcuts.py  uins.py  utils.py
